--- a/package.json
+++ b/package.json
@@ -3,28 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.15.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "config": "^1.29.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^2.1.0",
     "fawn": "^2.1.5",
-    "helmet": "^3.22.0",
+    "helmet": "^3.23.3",
     "joi": "^13.1.0",
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.29.1",
-    "mongoose": "^5.9.7",
+    "mongoose": "^5.12.0",
     "morgan": "^1.10.0",
-    "winston": "^2.4.0",
-    "winston-mongodb": "^3.0.0"
+    "multer": "^1.4.2",
+    "winston": "^3.3.3",
+    "winston-mongodb": "^5.0.7"
   }
 }
