--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "compression": "^1.7.4",
     "config": "^1.29.2",
     "cors": "^2.8.5",
+    "exceljs": "^4.3.0",
     "express": "^4.17.1",
     "express-async-errors": "^2.1.0",
     "fawn": "^2.1.5",
+    "flat": "^5.0.2",
     "helmet": "^3.23.3",
     "joi": "^13.1.0",
     "joi-objectid": "^3.0.1",
